small css fix - results on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,8 @@ body {
   border-radius: 50%;
   content: "";
   position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  left: 47.5%;
+  top: 47.5%;
   width: 5%;
   height: 5%;
   z-index: 10;
